--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/houses/user?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
