--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<version>18.0</version>
 		</dependency>
 
+		<!--HttpClient-->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
