--- a/house-web/src/main/resources/application.properties
+++ b/house-web/src/main/resources/application.properties
@@ -63,6 +63,24 @@ spring.freemarker.settings.default_encoding=UTF-8
 #将common.ftl识别为一个宏而不是一个普通的ftl文件
 spring.freemarker.settings.auto_import=common/common.ftl as common
 
+#保存的文件路径
+file.path=C://BJDocument//HouseImgs
+#Email生成链接的路径：
+domain.name=127.0.0.1:8099
+
+#Spring Mail 相关配置
+#邮件服务器地址
+spring.mail.host=smtp.126.com
+spring.mail.username=
+spring.mail.password=
+#是否开启验证
+spring.mail.properties.mail.smtp.auth=true
+#使用加密通讯
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
+
 
 
 
