NEW:拦截器的配置和实现，简单的鉴权操作

--- a/house-web/src/main/resources/application.properties
+++ b/house-web/src/main/resources/application.properties
@@ -65,13 +65,17 @@ spring.freemarker.settings.auto_import=common/common.ftl as common
 
 #保存的文件路径
 file.path=C://BJDocument//HouseImgs
+
+#图片路径
+file.prefix=http://127.0.0.1:8081/images
 #Email生成链接的路径：
 domain.name=127.0.0.1:8099
 
 #Spring Mail 相关配置
 #邮件服务器地址
 spring.mail.host=smtp.126.com
-
+spring.mail.username=nhl4501@126.com
+spring.mail.password=Nekogun8681700
 #是否开启验证
 spring.mail.properties.mail.smtp.auth=true
 #使用加密通讯
