--- a/house-web/src/main/resources/application.properties
+++ b/house-web/src/main/resources/application.properties
@@ -67,15 +67,15 @@ spring.freemarker.settings.auto_import=common/common.ftl as common
 file.path=C://BJDocument//HouseImgs
 
 #图片路径
-file.prefix=http://127.0.0.1:8081/images
+file.prefix=http://127.0.0.1:8097/images
 #Email生成链接的路径：
 domain.name=127.0.0.1:8099
 
 #Spring Mail 相关配置
 #邮件服务器地址
 spring.mail.host=smtp.126.com
-spring.mail.username=nhl4501@126.com
-spring.mail.password=Nekogun8681700
+spring.mail.username=
+spring.mail.password=
 #是否开启验证
 spring.mail.properties.mail.smtp.auth=true
 #使用加密通讯
